<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:gravity="center_horizontal"
    android:layout_height="fill_parent"
    android:background="#95000000"
    android:orientation="vertical">
    
    <LinearLayout
        android:id="@+id/rl_valu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:layout_marginTop="100px"
        android:gravity="center"
        android:orientation="vertical">
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="155px">
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/nt_valuation_tilte"
                skin:enable="true" />
            
            <ImageView
                android:id="@+id/iv_valuation_close"
                android:layout_width="84px"
                android:layout_height="22px"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30px"
                android:src="@drawable/nt_valuation_close" />
        </RelativeLayout>
        
        <LinearLayout
            android:id="@+id/rl_satisfid"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="visible">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70px"
                android:background="@color/xn_white"
                android:gravity="center"
                android:orientation="horizontal">
                
                <TextView
                    android:id="@+id/tv_valuation_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/iv_valuation_close"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/xn_require_evaluation"
                    android:textColor="#0684ea"
                    android:textSize="28px" />
            
            </LinearLayout>
            
            <RelativeLayout
                android:id="@+id/rl_pj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_valuation_title"
                android:background="@color/xn_white"
                android:gravity="center"
                tools:ignore="UnusedIds">
                
                <LinearLayout
                    android:id="@+id/ll_pj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24px"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    
                    <ImageView
                        android:id="@+id/iv_pj_one"
                        android:layout_width="40px"
                        android:layout_height="40px"
                        android:src="@drawable/nt_valuation_star_light" />
                    
                    <ImageView
                        android:id="@+id/iv_pj_two"
                        android:layout_width="40px"
                        android:layout_height="40px"
                        android:layout_marginStart="28px"
                        android:src="@drawable/nt_valuation_star_light" />
                    
                    <ImageView
                        android:id="@+id/iv_pj_three"
                        android:layout_width="40px"
                        android:layout_height="40px"
                        android:layout_marginStart="28px"
                        android:src="@drawable/nt_valuation_star_light" />
                    
                    <ImageView
                        android:id="@+id/iv_pj_four"
                        android:layout_width="40px"
                        android:layout_height="40px"
                        android:layout_marginStart="28px"
                        android:src="@drawable/nt_valuation_star_light" />
                    
                    <ImageView
                        android:id="@+id/iv_pj_five"
                        android:layout_width="40px"
                        android:layout_height="40px"
                        android:layout_marginStart="28px"
                        android:src="@drawable/nt_valuation_star_black" />
                </LinearLayout>
                
                <TextView
                    android:id="@+id/tv_pj_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_pj"
                    android:layout_marginBottom="25px"
                    android:layout_marginTop="25px"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/xn_sdk_satisfaction"
                    android:textColor="#343434"
                    android:textSize="24px" />
            </RelativeLayout>
        
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/rl_solution"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            
            <RelativeLayout
                android:id="@+id/ed_rela3"
                android:layout_width="fill_parent"
                android:layout_height="70px"
                android:background="#f4f4f4"
                android:gravity="center_vertical">
                
                
                <TextView
                    android:id="@+id/tv_solution_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart ="37px"
                    android:layout_toStartOf="@id/iv_valuation_close1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/xn_ad_questionstatus"
                    android:textColor="@color/xn_valuation_title"
                    android:textSize="24px" />
            
            </RelativeLayout>
            
            
            <LinearLayout
                android:id="@+id/ed_rela"
                android:layout_width="match_parent"
                android:layout_height="104px"
                android:layout_below="@id/ed_rela3"
                android:background="@color/xn_white"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UnusedIds">
                
                <LinearLayout
                    android:id="@+id/ll_valuation_solved"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart ="50px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10px"
                    android:paddingTop="10px">
                    
                    <ImageView
                        android:id="@+id/iv_solved"
                        android:layout_width="33px"
                        android:layout_height="33px"
                        android:layout_gravity="center"
                        android:src="@drawable/nt_valuation_solved_black" />
                    
                    <TextView
                        android:id="@+id/tv_solved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart ="18px"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/xn_val_done"
                        android:textColor="@color/xn_valuation_title"
                        android:textSize="24px" />
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/ll_valuation_solving"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10px"
                    android:paddingTop="10px">
                    
                    <ImageView
                        android:id="@+id/iv_solving"
                        android:layout_width="wrap_content"
                        android:layout_height="33px"
                        android:layout_gravity="center"
                        android:src="@drawable/nt_valuation_solving_black" />
                    
                    <TextView
                        android:id="@+id/tv_solving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="37px"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/xn_val_going"
                        android:textColor="@color/xn_valuation_title"
                        android:textSize="24px" />
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/ll_valuation_unsolve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10px"
                    android:paddingTop="10px">
                    
                    <ImageView
                        android:id="@+id/iv_unsolve"
                        android:layout_width="33px"
                        android:layout_height="33px"
                        android:layout_gravity="center"
                        android:src="@drawable/nt_valuation_unsolve_black" />
                    
                    <TextView
                        android:id="@+id/tv_unsolve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20px"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/xn_val_no"
                        android:textColor="@color/xn_valuation_title"
                        android:textSize="24px" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        
        
        <LinearLayout
            android:id="@+id/rl_reguest"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            
            <RelativeLayout
                android:id="@+id/ed_rela3"
                android:layout_width="fill_parent"
                android:layout_height="70px"
                android:background="#f4f4f4"
                android:gravity="center_vertical">
                
                
                <TextView
                    android:id="@+id/tv_reguest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart ="30px"
                    android:layout_toStartOf="@id/iv_valuation_close2"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/xn_adviseandfeedback"
                    android:textColor="@color/xn_valuation_title"
                    android:textSize="24px" />
            
            </RelativeLayout>
            
            
            <EditText
                android:id="@+id/et_support"
                android:layout_width="fill_parent"
                android:layout_height="170px"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_reguest"
                android:background="@color/xn_white"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/xn_valuation_suggestion_hint"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                android:paddingTop="20px"
                android:textColor="@android:color/black"
                android:textColorHint="@color/xn_valuation_hint"
                android:textSize="24px" />
        
        </LinearLayout>
        
        <TextView
            android:id="@+id/tv_valuation_submit"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_alignStart ="@+id/view_val01"
            android:background="@drawable/nt_bottom_radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/xn_submit_valuation"
            android:textColor="@color/xn_white"
            android:textSize="28px"
            skin:enable="true" />
    </LinearLayout>
</LinearLayout>